@@ -1,3 +1,15 @@
+2017-01-03      Gaius Mulley <gaius@gnu.org>
+
+	* gm2/mc/keyc.mod:  added main to the list of names to avoid.
+	* gm2/Make-lang.in:  change sed commands for malloc/realloc to
+	include preceeding space.
+	* gm2/Make-lang.in:  call gm2_genericize for each function as it
+	is ended.
+	* gm2/gm2-lang.c:  gm2_genercize (New function).
+	* gm2/gm2-lang.h:  gm2_genercize (New prototype).
+	* gm2/mc/decl.mod:  bugfix for high field passed as a parameter
+	  into another dynamic array.
+
 2017-01-01      Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-gcc/m2statement.c:  fixed nested procedure bug, use
